examples/test/testpolicy14562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14562
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key20: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value0
          key9: value33
      podSelector:
        matchLabels:
          key6: value1
          key0: value14
          key2: value33
